# adbot

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_rl_env.py  test_rl_training.py
configs/: default.yaml
docs/: DATABASE_AND_PORTS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_TROUBLESHOOTING.md  QUICK_REFERENCE.md
migrations/: env.py
migrations/versions/: 40c4150b097f_initial_database_schema.py
scripts/: init_db.py  setup_dev.sh
src/: __init__.py
src/api/: __init__.py  exceptions.py  main.py  middleware.py
src/api/routers/: __init__.py  campaigns.py  health.py
src/core/: __init__.py  adbot.py  reward_functions.py
src/core/environments/: __init__.py  base.py  bidding.py  budget.py  campaign.py  multi_platform.py
src/integrations/: __init__.py  base.py
src/integrations/google_ads/: __init__.py  client.py  models.py  utils.py
src/models/: __init__.py  agent.py  base.py  campaign.py  experiment.py  performance.py  user.py
src/utils/: __init__.py  config.py  logger.py
